tests/invalid/bytearray_extend_wrong_type/main.py
ba: bytearray = bytearray(b"hi")
ba.extend(1)
